--- a/src/GerenciamentoFuncionario.WPF/GerenciamentoFuncionario.WPF.csproj
+++ b/src/GerenciamentoFuncionario.WPF/GerenciamentoFuncionario.WPF.csproj
@@ -1,9 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
+	<TargetFramework>net5.0-windows10.0.19041.0</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
@@ -12,12 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GerenciamentoFuncionario.AcessoDados\GerenciamentoFuncionario.AcessoDados.csproj" />
-    <ProjectReference Include="..\GerenciamentoFuncionario.ViewModel\GerenciamentoFuncionario.ViewModel.csproj" />
+    <EmbeddedResource Include="Images\employee_office_icon.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Images\employee_office_icon.png" />
+    <ProjectReference Include="..\GerenciamentoFuncionario.AcessoDados\GerenciamentoFuncionario.AcessoDados.csproj" />
+    <ProjectReference Include="..\GerenciamentoFuncionario.ViewModel\GerenciamentoFuncionario.ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
